# goit-pythonweb-hw-12

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 04ebb516b1cc_fix_user_role_enum.py  0afad10ea51c_update_models.py  a630a5755cc6_new_migration.py  cd0d2e10632a_.py  dd4f6cf67025_init.py
src/api/: auth.py  contacts.py  reset_password.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_unit_repository_contacts.py
