[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = ["liudmylasovetovs <milkaegik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.14.1,<2.0.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic = ">=2.10.6,<3.0.0"
python-jose = ">=3.3.0,<4.0.0"
libgravatar = ">=1.0.4,<2.0.0"
passlib = ">=1.7.4,<2.0.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.20"
cloudinary = "^1.42.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
